--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,3 +26,6 @@ jobs:
       uses: actions/setup-python@v5.1.1
       with: 
         python-version: 3.11 
+    - name: Tests
+      run: node --version
+      run: python --version
