--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,6 +26,7 @@ jobs:
       uses: actions/setup-python@v5.1.1
       with: 
         python-version: 3.11 
-    - name: Tests
-      run: node --version
-      run: python --version
+    - name: Test
+      run: |
+        node --version
+        python --version
