--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,7 +26,13 @@ jobs:
       uses: actions/setup-python@v5.1.1
       with: 
         python-version: 3.11 
-    - name: Test
+    - name: install dependencias
       run: |
         node --version
         python --version
+        python -m pip install --upgrade pip
+        pip install robotframework
+        pip install robotframework-browser
+    - name: Browser init
+      run: rfbrowser init
+
