Atualizacao e rodando o Robot em Headless

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -35,4 +35,6 @@ jobs:
         pip install robotframework-browser
     - name: Browser init
       run: rfbrowser init
+    - name: Rodando o Robot E2E
+      run: robot -d logs/ Tests/Tasks/TestSuiteBlogAgi.robot 
 
