--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -42,4 +42,9 @@ jobs:
       with:
         gh_access_token: ${{ secrets.GITHUB_TOKEN}}
         report_path: /logs
+    - name: Upload Relatorio
+      uses: actions/upload-artifact@v4.3.5
+      with:
+        name: Relatorio Tests
+        path: logs
 
