--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,7 +10,7 @@ on:
     branches: [ "main" ]
 
 jobs:
-  tests:
+  Chromium :
 
     runs-on: ubuntu-latest
 
@@ -36,14 +36,55 @@ jobs:
     - name: Browser init
       run: rfbrowser init
     - name: Rodando o Robot E2E
-      run: robot -d logs/ Tests/Tasks/TestSuiteBlogAgi.robot 
+      run: robot -d logs/ -v BROWSER:chromium Tests/Tasks/TestSuiteBlogAgi.robot 
     - name: Relatorio no Actions
       uses: joonvena/robotframework-reporter-action@v2.4
+      if: always()
       with:
         gh_access_token: ${{ secrets.GITHUB_TOKEN}}
         report_path: /logs
     - name: Upload Relatorio
       uses: actions/upload-artifact@v4.3.5
+      if: always()
+      with:
+        name: Relatorio Tests
+        path: logs
+  Firefox :
+
+    runs-on: ubuntu-latest
+
+
+    steps:
+    - name: Clone do Projeto
+      uses: actions/checkout@v4
+    - name: Use Node.js 19
+      uses: actions/setup-node@v4
+      with:
+        node-version: 19
+    - name: Setup Phyton
+      uses: actions/setup-python@v5.1.1
+      with: 
+        python-version: 3.11 
+    - name: install dependencias
+      run: |
+        node --version
+        python --version
+        python -m pip install --upgrade pip
+        pip install robotframework
+        pip install robotframework-browser
+    - name: Browser init
+      run: rfbrowser init
+    - name: Rodando o Robot E2E
+      run: robot -d logs/ -v BROWSER:firefox Tests/Tasks/TestSuiteBlogAgi.robot 
+    - name: Relatorio no Actions
+      uses: joonvena/robotframework-reporter-action@v2.4
+      if: always()
+      with:
+        gh_access_token: ${{ secrets.GITHUB_TOKEN}}
+        report_path: /logs
+    - name: Upload Relatorio
+      uses: actions/upload-artifact@v4.3.5
+      if: always()
       with:
         name: Relatorio Tests
         path: logs
